--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 **/tests/report.html
 **/tests/report.htm
 **/tests/*.csv
+CTE_CambiaConstruccion/measure.xml
+CTE_EPBDcalc/measure.xml
+CTE_Workspace/measure.xml
