implementa la limitación de flujo por renovaciones hora siempre que CTE_Model haya calculado el volumen de la zona

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ CTE_CambiaUs/measure.xml
 IdealLoadsOptions/measure.xml
 CTE_Model/measure.xml
 CTE_Workspace/measure.xml
+CTE_Model/measure.xml
+CTE_Workspace/measure.xml
+IdealLoadsOptions/measure.xml
