--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ CTE_Workspace/measure.xml
 CTE_Model/measure.xml
 CTE_Workspace/measure.xml
 IdealLoadsOptions/measure.xml
+IdealLoadsOptions/measure.xml
+CTE_Workspace/measure.xml
